# cpp-analyzer

./: .travis.yml  Cargo.toml  README.md
ci/: install_llvm.sh
crates/libclang-wrapper/src/source/: mod.rs
crates/libclang-wrapper/src/source/compilation_database/: json_compile_commands.rs  mod.rs
crates/libclang-wrapper/src/source/translation_unit/: cursor.rs  index.rs  mod.rs
crates/libclang-wrapper/tests/: branching.cpp  class.h  do_while.cpp  for.cpp  for_no_init.cpp  for_range_based.cpp  header.h  lib.rs  switch.cpp  test_chars.rs  test_class.rs  test_compilation_database.rs  test_for.rs  test_function.rs  test_if.rs  test_switch.rs  test_type_aliases.rs  test_while.rs  type_aliases_and_typedefs.cpp  while.cpp
src/: index.rs  lib.rs
src/source/: compiler_instance.rs  index.rs  mod.rs
src/source/translation_unit/: cursor.rs  index.rs  mod.rs
tests/: chars.cpp  class.h  lib.rs  test_compile_commands.json
