[package]
name = "libclang-wrapper"
version = "0.1.0"
authors = ["Anatoly Baranov <valar1989@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["clang-sys/clang_9_0"]

[dependencies]
clang-sys = "0.29"
libc = "0.2"

