[package]
name = "libclang-wrapper"
version = "0.1.0"
authors = ["Anatolii Baranov <valar1989@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang-sys = { version = "0.29", features = ["clang_9_0"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.7"

